2017-02-26  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.32 released.

	* ebuild-mode.el (ebuild-mode-insert-skeleton): Remove $Id$ line
	from ebuild header.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

2017-01-15  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-get-keywords)
	(ebuild-mode-put-keywords): Improve error handling.

2016-06-19  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.31 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

2016-06-08  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.texi (Commands): Update Bugzilla URL to https.

2016-05-28  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (auto-mode-alist): Drop eblit support.

2016-05-07  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.30 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

	* keyword-generation.sh (OBSOLETE): Cleanup.

2015-12-20  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.29 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-0): Match list
	of commands against PMS.
	(ebuild-mode-keywords-EAPI): New variable, contains only "EAPI".
	(ebuild-mode-keywords-eapi6): New variable, EAPI 6 commands.
	(ebuild-mode-keywords-eapi-deprecated)
	(ebuild-mode-keywords-eclass-deprecated): New variables, splitting
	ebuild-mode-keywords-deprecated.
	(ebuild-mode-keywords-eclass): Variable removed, merged into
	ebuild-mode-keywords-0.

2015-08-23  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.28 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

2015-08-09  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-insert-skeleton): Insert $Id$
	instead of $Header$, following the Git migration.

2014-11-18  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.27 released.

2014-11-17  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.
