@@ -1,3 +1,9 @@
+2017-02-27  Ulrich Müller  <ulm@gentoo.org>
+
+	* ebuild-mode.el:
+	* ebuild-mode.texi: Update documentation to use generic terms
+	where possible, instead of being Portage specific.
+
 2017-02-26  Ulrich Müller  <ulm@gentoo.org>
 
 	* Version 1.32 released.
